# plot232

./: CMakeLists.txt  README.md  plot232.nsi  plot232.pro
src/: CMakeLists.txt  application.cc  application.hh  ctrlview.cc  ctrlview.hh  main.cc  mainwindow.cc  mainwindow.hh  plot.cc  plot.hh  plotview.cc  plotview.hh
